--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -90,7 +90,7 @@
     </app-topbar>
 
     <!-- Contenido de la sección -->
-    <div class="p-4 md:p-6 lg:p-8 space-y-8">
+    <div class="p-4 md:p-6 lg:p-8 space-y-8 pb-32">
 
       @switch (active) {
 
