prueba sandbox funcional

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,5 +3,7 @@
   <!-- Toast Container - Notificaciones globales -->
   <app-toast-container />
   <app-modal />
+  <!-- Cookie Banner -->
+  <app-cookie-banner />
 
 </div>
