--- a/src/app/pages/privacy-policy/privacy-policy.component.html
+++ b/src/app/pages/privacy-policy/privacy-policy.component.html
@@ -19,7 +19,7 @@
                     Introducción
                 </h2>
                 <p class="leading-relaxed">
-                    En Dev-Sharks, nos comprometemos a proteger tu privacidad y a garantizar la transparencia en el
+                    En Dev Hub Sharks, nos comprometemos a proteger tu privacidad y a garantizar la transparencia en el
                     manejo de tus datos.
                     Esta política explica cómo recopilamos, usamos y protegemos tu información personal cuando utilizas
                     nuestra plataforma.
@@ -142,7 +142,7 @@
                 <p class="leading-relaxed">
                     Si tienes preguntas sobre esta política, puedes contactarnos en: <a
                         href="mailto:legal@dev-sharks.com"
-                        class="text-lime-400 hover:underline">legal@dev-sharks.com</a>
+                        class="text-lime-400 hover:underline">legal@devhubsharks.com</a>
                 </p>
             </section>
 
