metodo de codigo de verificacion v5

--- a/src/app/pages/profile-student/profile-student.html
+++ b/src/app/pages/profile-student/profile-student.html
@@ -535,7 +535,7 @@
                     <span class="text-3xl font-bold text-lime-400">{{ sale.total | mxnCurrency }}</span>
 
                   </div>
-                  <span class="text-sm text-slate-500 self-start mt-2">{{ sale.currency_total }}</span>
+                  <span class="text-sm text-slate-500 self-start mt-2">MXN</span>
                 </div>
 
                 <!-- 🔥 DESGLOSE DE PAGO MIXTO -->
